# tesis-maestria

./: Enlace hacia pycaffe.py  colores.py  easisest_opencv_install.sh  opencv.sh  opencv_.sh
VTK_examples/CellPointNeighbors/: CMakeLists.txt  CellPointNeighbors.cxx
VTK_examples/OBJ_file_reader/: CMakeLists.txt  ReadOBJ.cxx
VTK_examples/ocv_vtk/: CMakeLists.txt
bilateralinceptiosn2/: borrame.txt  do_segmentation.py  net.cpp  spixel_feature_layer.cpp
bilateralinceptiosn2/models/: deeplab_coco_largefov_bi6_2_bi7_6_deploy.prototxt  test.prototxt  test2.prototxt
bilateralinceptiosn2/nuevo/: reduceval (copia).txt  reduceval.txt
caffe_pruebas/heatmap/: CMakeLists.txt  a.out  main.cpp  main_.cpp
caffe_pruebas/xor/: CMakeLists.txt  main.cpp  test.cpp
delaunator2/: baricenter.html  baricenter2.html  demo.html  diagrams.js  index.html  read  read_obj.cpp  vertices.mesh
delaunator2/getDualGraphPoints/: baricenter.html  diagrams.js
escritorio/: Enlace hacia cudnn.hpp  delete.cpp  easisest_opencv_install.sh  lena.cpp  my_layer.hpp  net.params  prueba.py  read_pgm_file.cpp  test.prototxt  test_cuda.cu  test_libs.cpp  test_libs.cu
gSLICr - remake/: demo.cpp  test.h
gSLICr - remake/gSLICr_Lib/engines/: gSLICr_core_engine.cpp  gSLICr_core_engine.h  gSLICr_seg_engine.cpp  gSLICr_seg_engine.h  (+3 more)
python_pruebas/borrame/: arrays.py  borrame.py
python_pruebas/py_caffe/: model.caffemodel  simple.cfg  test.py  test2.py  test3.py
python_pruebas/scikit_slic/: main.py  prueba.py
python_pruebas/segraph_pruebas/: edges.out  main.py  main_.py  segments.out  segments.ppm
(+15 files in other folders)
